Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20292

REPEAT(x,-1) returns a wrong data type

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL)
    • 10.3.18, 10.4.8
    • Data types
    • None

    Description

      CREATE OR REPLACE TABLE t1 (i BIGINT);
      INSERT INTO t1 VALUES (42);
      CREATE OR REPLACE TABLE t2 AS SELECT
        REPEAT(i,0) AS c0,
        REPEAT(i,-1) AS c1
      FROM t1;
      SHOW CREATE TABLE t2;
      

      +-------+------------------------------------------------------------------------------------------------------------------------------------------------------------+
      | Table | Create Table                                                                                                                                               |
      +-------+------------------------------------------------------------------------------------------------------------------------------------------------------------+
      | t2    | CREATE TABLE `t2` (
        `c0` char(0) CHARACTER SET utf8 DEFAULT NULL,
        `c1` longtext CHARACTER SET utf8 DEFAULT NULL
      ) ENGINE=InnoDB DEFAULT CHARSET=latin1 |
      +-------+------------------------------------------------------------------------------------------------------------------------------------------------------------+
      

      It's expected that c1 also creates a column of the `char(0)` data type.

      This problem causes ColumnStore to crash, see MDEV-20085 for details.

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.