MDEV-20292 REPEAT(x,-1) returns a wrong data type